--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.9.3"
