--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.1.4",
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
